<resources>
    <string name="app_name">Temp/o</string>
    <integer name="google_play_services_version">7327000</integer>
    <string name="google_maps_key">AIzaSyAE0RfwImo9ye_gsroqIxpB3jIb2bZG614</string>
    <!-- main activity -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="default_temp">21</string>
    <string name="temp_postfix">°C</string>
    <string name="placeholder_humidity">Humidity</string>
    <string name="default_humidity">63</string>
    <string name="humidity_postfix">%</string>

    <!-- menu item-->
    <string name="action_history">History</string>
    <string name="action_main">Main</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
</resources>
