<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <!-- humidity text-->
    <!-- humidity value -->
    <!-- humidity postfix -->
    <!-- save button -->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true">

            <TextView
                android:text="@string/default_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/humidityText"
                android:id="@+id/textViewHumidity"
                android:layout_centerVertical="true"
                android:layout_alignEnd="@+id/textView3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity_postfix"
                android:id="@+id/humidity_postfix"
                style="@style/humidityText"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/textViewHumidity"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_humidity"
            android:id="@+id/textView3"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="59dp">

            <!-- temp value -->
            <!-- temp postfix-->

            <TextView
                android:text="@string/default_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/tempText"
                android:id="@+id/textViewTemp"
                android:layout_alignParentTop="true"
                android:layout_alignEnd="@+id/button_save"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_postfix"
                android:id="@+id/textView"
                style="@style/tempText"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textView3"/>

        </LinearLayout>
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:id="@+id/button_save"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="saveCurrentEntry"/>

</RelativeLayout>
